traefik-ingress/ingress-drone.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-server
  namespace: devops 
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: drone.alphalawyer.cn 
    http:
      paths:
      - path: /
        backend:
          serviceName: drone-svc
          servicePort: 80
