traefik-ingress/ingress-elasticsearch-kibana-dev.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-dev-web 
  namespace: elasticsearch
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: dw.alphalawyer.cn 
    http:
      paths:
      - path: /kibana-dev
        backend:
          serviceName: kibana-dev
          servicePort: 5601
